[gd_scene load_steps=17 format=2]

[ext_resource path="res://launch_site/launch_site.gd" type="Script" id=1]
[ext_resource path="res://launch_site/launch_site.png" type="Texture" id=2]
[ext_resource path="res://launch_site/engineer.png" type="Texture" id=3]
[ext_resource path="res://font1.tres" type="DynamicFont" id=4]
[ext_resource path="res://art/progress_under.png" type="Texture" id=5]
[ext_resource path="res://art/progress_under_p.png" type="Texture" id=6]
[ext_resource path="res://art/arrow.png" type="Texture" id=7]
[ext_resource path="res://art/arrow_pressed.png" type="Texture" id=8]
[ext_resource path="res://art/arrow_hover.png" type="Texture" id=9]
[ext_resource path="res://art/launch.png" type="Texture" id=10]
[ext_resource path="res://art/launch_pressed.png" type="Texture" id=11]
[ext_resource path="res://art/launch_hover.png" type="Texture" id=12]
[ext_resource path="res://launch_site/engineer1.png" type="Texture" id=13]
[ext_resource path="res://launch_site/engineer_pressed.png" type="Texture" id=14]
[ext_resource path="res://launch_site/engineer_hover.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.905882, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="launch_site" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.764706, 0.886275, 1, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 128, 72 )

[node name="launch_hud" type="MarginContainer" parent="."]
margin_left = -0.475662
margin_right = 127.524
margin_bottom = 72.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="launch_hud"]
margin_left = 3.0
margin_top = 3.0
margin_right = 124.0
margin_bottom = 69.0
custom_constants/separation = -30

[node name="HBoxContainer2" type="HBoxContainer" parent="launch_hud/VBoxContainer"]
margin_top = 32.0
margin_right = 121.0
margin_bottom = 43.0
size_flags_vertical = 10
custom_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="launch_hud/VBoxContainer/HBoxContainer2"]
margin_top = 2.0
margin_right = 9.0
margin_bottom = 11.0
size_flags_vertical = 10
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="launch_hud/VBoxContainer/HBoxContainer2"]
margin_left = 13.0
margin_right = 13.0
margin_bottom = 11.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )

[node name="anim" type="AnimationPlayer" parent="launch_hud/VBoxContainer/HBoxContainer2"]
anims/fade = SubResource( 1 )

[node name="launch_progress" type="TextureProgress" parent="launch_hud/VBoxContainer"]
margin_top = 49.0
margin_right = 121.0
margin_bottom = 52.0
size_flags_vertical = 10
size_flags_stretch_ratio = 0.9
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="launch_hud/VBoxContainer"]
margin_top = 57.0
margin_right = 121.0
margin_bottom = 66.0
size_flags_vertical = 10
custom_constants/separation = 2

[node name="back_btn" type="TextureButton" parent="launch_hud/VBoxContainer/HBoxContainer"]
margin_right = 9.0
margin_bottom = 9.0
mouse_filter = 1
size_flags_vertical = 8
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="launch_btn" type="TextureButton" parent="launch_hud/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 20.0
margin_bottom = 9.0
size_flags_vertical = 8
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="request_btn" type="TextureButton" parent="launch_hud/VBoxContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 31.0
margin_bottom = 9.0
size_flags_vertical = 8
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
[connection signal="pressed" from="launch_hud/VBoxContainer/HBoxContainer/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="launch_hud/VBoxContainer/HBoxContainer/launch_btn" to="." method="_on_launch_btn_pressed"]
[connection signal="pressed" from="launch_hud/VBoxContainer/HBoxContainer/request_btn" to="." method="_on_request_btn_pressed"]
